--- a/projects/solo_project/flowers/flask_app/templates/edit_profile.html
+++ b/projects/solo_project/flowers/flask_app/templates/edit_profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BAEM Flower Shop</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -22,7 +23,17 @@
         </div>
         <div>
             <form action="/update_profile" method="POST">
-                <h1>Update User Info</h1>
+                <h2>Update User Info</h2>
+                <div>
+                    {%with messages = get_flashed_messages()%}
+                        {%if messages%}
+                            <h2>FLASH!!! AHHH!!!</h2>
+                            {%for message in messages%}
+                                <p>{{message}}</p>
+                            {%endfor%}
+                        {%endif%}
+                    {%endwith%}
+                </div>
                 <input type="hidden" name="id" value="{{user.id}}">
                 <div class="form-group">
                     <label for="first_name">First Name:</label>
@@ -38,6 +49,20 @@
                 </div>
                 <input type="submit" value="Update User Information">
             </form>
+        </div>
+    </div>
+    <div class="footer">
+        <div>
+            <p>© 2022 Company, Inc</p>
+        </div>
+        <div>
+            <img src="../static/assets/logo.jpg" class="logo">
+        </div>
+        <div class="footer-extra">
+            <p>Features</p>
+            <p>FAQs</p>
+            <p>About</p>
+            <p>Contact Us</p>
         </div>
     </div>
 </body>
