--- a/projects/solo_project/flowers/flask_app/templates/edit_review.html
+++ b/projects/solo_project/flowers/flask_app/templates/edit_review.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BAEM Flower Shop</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -20,14 +21,31 @@
                 <a class="logout" href="/logout">Sign Out</a>
             </div>
         </div>
-        <div class="content-review">
+        <div class="content">
             <div class="content-reviewt">
                 <form action="/update/review" method="POST">
-                    <label for="description">Leave a Review: </label>
-                    <textarea name="description" cols="30" rows="10"></textarea>
-                    <input id="review_btn" type="submit" value="Update Review">
+                    <div class="form-group">
+                        <input type="hidden" name="id" value="{{review.id}}">
+                        <label for="first_name" class="h3 mt-2">Update Review: </label>
+                        <textarea class="form-control" name="description" rows="3"></textarea>
+                    </div>
+                    <input type="submit" id="review_btn" value="Update Review">
                 </form>
             </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div>
+            <p>© 2022 Company, Inc</p>
+        </div>
+        <div>
+            <img src="/static/assets/logo.jpg" class="logo">
+        </div>
+        <div class="footer-extra">
+            <p>Features</p>
+            <p>FAQs</p>
+            <p>About</p>
+            <p>Contact Us</p>
         </div>
     </div>
 </body>
