--- a/projects/solo_project/flowers/flask_app/templates/login.html
+++ b/projects/solo_project/flowers/flask_app/templates/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
@@ -61,6 +62,20 @@
                 </div>
                 <input type="submit" value="Login">
             </form>
+        </div>
+    </div>
+    <div class="footer">
+        <div>
+            <p>© 2022 Company, Inc</p>
+        </div>
+        <div>
+            <img src="./static/assets/logo.jpg" class="logo">
+        </div>
+        <div class="footer-extra">
+            <p>Features</p>
+            <p>FAQs</p>
+            <p>About</p>
+            <p>Contact Us</p>
         </div>
     </div>
 </body>
