--- a/projects/solo_project/flowers/flask_app/templates/reviews.html
+++ b/projects/solo_project/flowers/flask_app/templates/reviews.html
@@ -28,20 +28,31 @@
                         <input type="hidden" name="id">
                         <label for="first_name" class="h3 mt-2">Review: </label>
                         <textarea class="form-control" name="description" rows="3"></textarea>
+                        {%with messages = get_flashed_messages()%}
+                            {%if messages%}
+                                {%for message in messages%}
+                                    <p>{{message}}</p>
+                                {%endfor%}
+                            {%endif%}
+                        {%endwith%}
                     </div>
                     <input type="submit" id="review_btn" value="Add Review">
                 </form>
             </div>
             <div class="content-reviewb">
-                <h2>Reviews: </h2>
+                <h3>Reviews: </h3>
                 {%for i in all_reviews%}
-                <div class="review">
-                    <p>Name: {{i.users.first_name}} {{i.users.last_name}}</p>
-                    <p>Review: {{i.description}}</p>
-                    <p>Posted on: {{i.created_at}}</p>
-                    {%if i.users.id == session_id%}
-                    <a href="/edit/review/{{i.id}}">Edit</a>
-                    <a href="/delete/review/{{i.id}}">Delete</a>
+                <div class="card">
+                    <div class="card-header">
+                        <p>Name: {{i.users.first_name}} {{i.users.last_name}}</p>
+                    </div>
+                    <div class="card-body">
+                        <p>Review: {{i.description}}</p>
+                        <p>Posted on: {{i.created_at}}</p>
+                        {%if i.users.id == session_id%}
+                        <a href="/edit/review/{{i.id}}">Edit</a>
+                        <a href="/delete/review/{{i.id}}">Delete</a>
+                    </div>
                     {%endif%}
                 </div>
                 {%endfor%}
