--- a/projects/solo_project/flowers/flask_app/templates/dashboard.html
+++ b/projects/solo_project/flowers/flask_app/templates/dashboard.html
@@ -42,7 +42,7 @@
                     <img src="./static/assets/home5.JPG" id="home5">
                 </div>
                 <div>
-                    <img src="./static/assets/home4.HEIC" id="home4">
+                    <img src="./static/assets/home10.jpg" id="home4">
                 </div>
                 <div>
                     <img src="./static/assets/home2.jpg" id="home2">
@@ -51,15 +51,15 @@
             <div class="row2">
                 <div class="contentl">
                     <div class="contentl1">
-
+                        <img src="./static/assets/home8.jpg" alt="error1" id="home2">
                     </div>
                     <div class="contentl2">
-
+                        <img src="./static/assets/home9.jpg" alt="error2" id="home2">
                     </div>
                 </div>
                 <div class="contentr">
                     <img src="./static/assets/prop1.jpg" id="home6">
-                    <img src="./static/assets/prop1.jpg" id="home7">
+                    <img src="./static/assets/home11.jpg" id="home7">
                 </div>
             </div>
         </div>
