--- a/projects/solo_project/flowers/flask_app/templates/dashboard.html
+++ b/projects/solo_project/flowers/flask_app/templates/dashboard.html
@@ -36,30 +36,30 @@
         <div class="content">
             <div class="row1">
                 <div>
-                    <img src="./static/assets/home1.jpg" id="home1">
+                    <img src="./static/assets/home1.jpg" class="home1">
                 </div>
                 <div>
-                    <img src="./static/assets/home5.JPG" id="home5">
+                    <img src="./static/assets/home5.JPG" class="home1">
                 </div>
                 <div>
-                    <img src="./static/assets/home10.jpg" id="home4">
+                    <img src="./static/assets/home10.jpg" class="home1">
                 </div>
                 <div>
-                    <img src="./static/assets/home2.jpg" id="home2">
+                    <img src="./static/assets/home2.jpg" class="home1">
                 </div>
             </div>
             <div class="row2">
                 <div class="contentl">
                     <div class="contentl1">
-                        <img src="./static/assets/home8.jpg" alt="error1" id="home2">
+                        <img src="./static/assets/home8.jpg" alt="error1" class="home1">
                     </div>
                     <div class="contentl2">
-                        <img src="./static/assets/home9.jpg" alt="error2" id="home2">
+                        <img src="./static/assets/home9.jpg" alt="error2" class="home1">
                     </div>
                 </div>
                 <div class="contentr">
-                    <img src="./static/assets/prop1.jpg" id="home6">
-                    <img src="./static/assets/home11.jpg" id="home7">
+                    <img src="./static/assets/prop1.jpg" class="home2">
+                    <img src="./static/assets/home11.jpg" class="home2">
                 </div>
             </div>
         </div>
