--- a/projects/book_club_python/flask_app/templates/creator.html
+++ b/projects/book_club_python/flask_app/templates/creator.html
@@ -22,7 +22,7 @@
                 <p>Added on: {{book.created_at}}</p>
                 <p>Last updated on: {{book.updated_at}}</p>
                 <label for="">Description: </label>
-                <textarea name="" id="" cols="30" rows="10">{{book.description}}</textarea>
+                <textarea class="form-control" id="" cols="30" rows="10">{{book.description}}</textarea>
             </div>
             <div class="right">
                 <h3>Users Who Like This Book:</h3>
