update hidden inputs

--- a/projects/book_club_python/flask_app/templates/dashboard.html
+++ b/projects/book_club_python/flask_app/templates/dashboard.html
@@ -29,6 +29,7 @@
                     <div>
                         <label for="title">Title: </label>
                         <input class="form-control" type="text" name="title">
+                        <input type="hidden" name="user_id" value="{{user.id}}"">
                     </div>
                     <div>
                         <label for="description">Description: </label>
