--- a/projects/book_club_python/flask_app/templates/creator.html
+++ b/projects/book_club_python/flask_app/templates/creator.html
@@ -12,7 +12,10 @@
     <div class="container">
         <div class="header">
             <h2>Welcome, {{user.first_name}}!</h2>
-            <a href="/logout">Log Out</a>
+            <div>
+                <a href="/dashboard">Home</a>
+                <a href="/logout">Log Out</a>
+            </div>
         </div>
         <hr>
         <div class="content">
