--- a/projects/book_club_python/flask_app/templates/viewer.html
+++ b/projects/book_club_python/flask_app/templates/viewer.html
@@ -29,6 +29,11 @@
             </div>
             <div class="right">
                 <h3>Users Who Like This Book:</h3>
+                <ul>
+                    {%for user in all_users%}
+                    <li>{{user.first_name}} {{user.last_name}}</li>
+                    {%endfor%}
+                </ul>
                 <form action="/add_to_favorites" method="POST">
                     <input type="hidden" name="book_id" value="{{book.id}}">
                     <input type="hidden" name="user_id" value="{{session['user_id']}}">
